--- a/style.css
+++ b/style.css
@@ -78,3 +78,10 @@
     font-family: fantasy;
     color: #253663;
 }
+.footer1 {
+    text-align: center;
+    background-color: blueviolet;
+    padding: 5px;
+    color: #edfffb;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
