--- a/style.css
+++ b/style.css
@@ -85,9 +85,13 @@
     color: #edfffb;
 }
 .evszakkepek {
+    width: 200px;
+    height: 100px;
+    transition: 3s;
+    float: left;
+}
+.evszakkep {
     border: #fcba03 solid 4px;
     border-radius: 4px;
-    transition: 3s;
-    margin: 40px;
-    width: 400px;
+    transition: 3s;   
 }
