--- a/style.css
+++ b/style.css
@@ -88,10 +88,11 @@
     width: 200px;
     height: 100px;
     transition: 3s;
-    float: left;
 }
 .evszakkep {
     border: #fcba03 solid 4px;
     border-radius: 4px;
-    transition: 3s;   
+    transition: 3s;  
+    width: 200px;
+    height: 100px;
 }
