--- a/style.css
+++ b/style.css
@@ -89,6 +89,9 @@
     height: 100px;
     transition: 3s;
     float: left;
+    margin: auto;
+    margin-top: 50px;
+    margin-right: 20px;
 }
 .evszakkepek {
     border: #fcba03 solid 4px;
