--- a/style.css
+++ b/style.css
@@ -83,6 +83,10 @@
     background-color: blueviolet;
     padding: 5px;
     color: #edfffb;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;  
 }
 #div3 {
     width: 25%;
