--- a/style.css
+++ b/style.css
@@ -99,6 +99,8 @@
     border: #fcba03 solid 4px;
     border-radius: 4px;
     width: 300px;
+    display: block;
+    margin: auto;
   }
 #div3:hover {
     transform:  scale(1.2, 1.2);
