--- a/style.css
+++ b/style.css
@@ -99,6 +99,7 @@
     border: #fcba03 solid 4px;
     border-radius: 4px;
     width: 300px;
+    height: 168.750px;
     display: block;
     margin: auto;
   }
